style.css
/* ... */
.hero-btn a {
    color: var(--bg-secondary);
    margin-left: 1rem;
}

.hero-btn i {
    width: 2.6rem;
    height: 2.6rem;
    background-color: var(--bg-secondary);
    color: var(--text-primary);
    border-radius: 99rem;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 0.8rem;
    transform: rotate(-45deg);
    transition: all 0.3s ease;
}

.hero-btn:hover {
    transform: translateY(-4px);
}

.hero-btn:hover.hero-btn i {
    transform: rotate(0deg);
}

.hero-social {
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 100%;
}

.hero-info {
    display: flex;
    gap: 24px;
}

.hero-show {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.hero-show i {
    font-size: 20px;
    margin-bottom: 12px;
    width: 42px;
    height: 42px;
    padding: 4px;
    -webkit-backdrop-filter: blur(10px);
    backdrop-filter: blur(10px);
    background-color: rgba(255, 255, 255, 0.05);
    border: 1px solid rgba(255, 255, 255, 0.3);
    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
    border-radius: 99rem;
    display: flex;
    align-items: center;
    justify-content: center;
}

.hero-show p {
    margin-bottom: 8px;
}

.social-icons {
    display: flex;
    align-items: center;
    gap: 16px;
}

.social-icons>i {
    font-size: 24px;
    padding: 4px;
    -webkit-backdrop-filter: blur(10px);
    backdrop-filter: blur(10px);
    background-color: rgba(255, 255, 255, 0.05);
    border: 1px solid rgba(255, 255, 255, 0.3);
    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
    border-radius: 99rem;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 48px;
    height: 48px;
    transition: all 0.4s ease;
    cursor: pointer;
    color: var(--text-primary);
}
.social-icons>i:hover {
    transform: translateY(-6px);
}


/* Project section css */
.project-section{
  padding: 4rem 3.5rem;
}
.project-top-heading{
  display: flex;
  justify-content: space-between;
  gap: 16px;
}
.project-top-heading>h2,.project-subtitle{
  flex: 1;
}
.project-subtitle>h2{
  font-size: 30px;
  position: relative;
  padding-bottom: 0.5rem;
}
.project-subtitle>h2::after{
  content: "";
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100px;
  height: 3px;
  background-color: var(--text-primary);
}
.project-title{
  font-size: 44px;
  font-weight: 400;
}

.experience-row {
  display: grid;
  grid-template-columns: 1fr 1fr;
  column-gap: 2rem;
  row-gap: 3rem;
  align-items: start;
  margin-top: 4rem;
}

.experience-card-wrapper {
  display: flex;
  flex-direction: column;
  justify-content: start;
  text-decoration: none;
  color: inherit;
  position: relative;
}

.experience-card {
  border-radius: 20px;
  overflow: hidden;
  position: relative;
  width: 100%;
  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.08);
  transition: transform 0.4s ease;
}
.experience-card-wrapper:hover .experience-card img {
  transform: scale(1.08);
}

.experience-card img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  transition: transform 0.4s ease;
}

/* Specific heights */
.small-card {
  height: 380px;
}
.large-card {
  height: 520px;
}

.card-extra-text {
  font-size: 1.25rem;
  margin-top: 0.85rem;
  line-height: 1.4;
  color: var(--text-secondary);
  max-width: 90%;
  opacity: 0.95;
}

.card-content {
  position: absolute;
  bottom: 0;
  padding: 1rem;
  color: white;
  background: linear-gradient(to top, rgba(0, 0, 0, 0.75), transparent);
  width: 100%;
  z-index: 2;
}

.card-content h3 {
  font-size: 2.4rem;
  margin-bottom: 0.2rem;
}
.card-content p {
  font-size: 0.95rem;
  opacity: 0.85;
}

.card-action-btn {
  position: absolute;
  top: 15px;
  right: 15px;
  backdrop-filter: blur(10px);
  background-color: rgba(255, 255, 255, 0.85);
  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
  color: var(--text-primary);
  border: none;
  border-radius: 50%;
  width: 38px;
  height: 38px;
  display: flex;
  align-items: center;
  justify-content: center;
  z-index: 3;
  cursor: pointer;
  transform: rotate(-45deg);
  transition: background 0.3s ease, transform 0.3s ease;
}

.card-action-btn i {
  font-size: 16px;
}

.card-action-btn:hover {
  transform: scale(1.1);
}


/* CSS for About section */
.about-section{
  padding: 4rem 3.5rem;
  background-color: var(--bg-tertiary);
}
.about-container {
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.about-image,.about-text{
 flex: 1;
}
.about-image{
  height: 560px;
}
.about-image>img{
  width: 90%;
  height: 100%;
  object-fit: cover;
  border-radius: 20px;
  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.15);
}

.about-heading{
    font-size: 30px;
    color: var(--text-primary);
    padding-bottom: 0.3rem;
}

.underline-div{
    border: 2px solid var(--text-primary);
    width: 80px;
    margin-bottom: 2rem;
}

.about-text h2 {
  font-size: clamp(2.5rem, 6vw, 5rem);
  font-weight: 400;
  margin-bottom: 20px;
  color: var(--text-primary);
}

.about-para {
  line-height: 1.7;
  margin-bottom: 20px;
  color: var(--text-secondary);
  opacity: 0.95;
}

.about-btn {
 margin-top: 8px;
}


/* CSS for Review */
.review-section{
  padding: 4rem 3.5rem;
}

.review-section h2 {
  font-size: 44px;
  text-align: center;
}
.review-subtitle{
  font-size:20px;
  margin-block: 20px;
  text-align: center;
}
.review-slider {
  position: relative;
  width: 100%;
  max-width: 500px;
  margin-inline: auto;
  margin-top:4rem;
  min-height: 300px;
}
.quote-icon {
  font-size: 60px;
  color: var(--text-primary);
  opacity: 0.45;
  position: absolute;
  z-index: 0;
  pointer-events: none;
}

.quote-top-right {
  top: -25px;
  right: -85px;
}

.quote-bottom-left {
  bottom: 10px;
  left: -85px;
}
/* ... */

